--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "find-java-home-sync",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Find JAVA_HOME on any system synchronously",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -r should test.js"
+    "test": "mocha -u exports --reporter spec test.js",
+    "cover": "istanbul cover node_modules/mocha/bin/_mocha --reporter spec test.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/lazyjin/node-find-java-home-sync.git"
   },
   "dependencies": {
-    "deasync": "~0.1.9",
     "which": "~1.0.5",
     "winreg": "~1.2.2"
   },
@@ -29,6 +29,8 @@
   },
   "homepage": "https://github.com/lazyjin/node-find-java-home-sync",
   "devDependencies": {
+    "coveralls": "^2.11.16",
+    "istanbul": "^0.4.5",
     "mocha": "~1.18.2",
     "should": "~3.3.0"
   }
