--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "url": "https://github.com/lazyjin/node-find-java-home-sync.git"
   },
   "dependencies": {
-    "which": "~1.0.5",
-    "winreg": "~1.2.2"
+    "which": "~1.0.5"
   },
   "keywords": [
     "JAVA_HOME",
